# BMI08x-Sensor-API

examples/common/: coines.h
examples/read_synchronized_data_linux_pigpio/: CMakeLists.txt  README.md  bmi08ximu.cpp  bmi08ximu.h  main.cpp  sensordata.cpp  sensordata.h  vector3d.h
